--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@types/morgan": "^1.9.3",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
