--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "exec": "ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
     "@types/swagger-ui-express": "^4.1.3",
