--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.9.1",
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^6.2.1",
@@ -31,7 +32,9 @@
   "dependencies": {
     "@types/morgan": "^1.9.3",
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
