--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "axios": "^0.22.0",
+    "axios": "^0.23.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
     "@types/redux": "^3.6.0",
