--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.23.0",
     "framer-motion": "^4.1.17",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
